Prefix importer-specific cm-layer-title class styles with cm-importer. Fixes the wrapping behavior of long layer titles in the panel view. ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=35545292

--- a/resource/main.css
+++ b/resource/main.css
@@ -774,7 +774,7 @@ input[type=checkbox]:checked::after {
   padding-top:5px;
   padding-left:3px;
 }
-.cm-layer-title {
+.cm-importer .cm-layer-title {
   display:inline-block;
   margin-top:2px !important;
   margin-bottom:4px !important;
